# mlabs

./: .dockerignore  .env.example  .gitignore  .prettierrc  CLAUDE.md  Caddyfile  DESIGN.md  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  docker-compose.prod.yml  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.tsbuildinfo  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts
apps/api/src/libs/: db.ts  env-loader.ts  env.test.ts  env.ts  (+5 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: build-sidecar.mjs  smoke-sidecar.mjs
apps/desktop/src/: main.ts  splash.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: errors.rs  main.rs  sidecar.rs
apps/desktop/tests/: sidecar-bundle.test.mjs
apps/web/: .gitignore  components.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/docs/: PROJECT_STRUCTURE.md
apps/web/src/: App.tsx  main.tsx  routeTree.gen.ts
docs/: account-fields-plan.md
docs/superpowers/plans/: 2026-04-24-macos-desktop-installer.md  2026-04-26-macos-desktop-installer.md  2026-04-26-transactions-page-filters.md  2026-05-03-transfer-reconciliation.md
docs/superpowers/specs/: 2026-04-24-macos-desktop-installer-design.md  2026-04-26-transactions-page-filters-design.md  2026-05-03-transfer-reconciliation-design.md
(+297 files in other folders)
